--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
   <div id="board">
     <canvas id='canvas' width="150" height="150"></canvas>
   </div>
-  <script src="/canvas.js"></script>
+  <script src="./canvas.js"></script>
 </body>
 </html>
