--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Minesweeper</title>
 </head>
 <body>
-  <canvas id='canvas' width="150" height="150"></canvas>
+  <canvas id='canvas'></canvas>
   <script src="./canvas.js"></script>
 </body>
 </html>
