--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Minesweeper</title>
+  <style>
+    body {
+      margin: 0;
+    }
+
+    .box {
+      width: 500px;
+      margin: 10px;
+    }
+
+  </style>
 </head>
 <body>
-  <canvas id='canvas'></canvas>
+  <h1 class="box">Minesweeper</h1>
+  <canvas class="box" id='canvas' width="500" height="500"></canvas>
   <script src="./canvas.js"></script>
 </body>
 </html>
