akhirnya selesai jugaaaaaaa

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 </head>
 <body>
   <h1 class="box">Minesweeper</h1>
+  <blockquote class="box">
+    Klik sekali, maka anda akan menemukan misterinya.
+    <br>
+    Klik dua kali, kalau anda ragu-ragu.
+    <br>
+    Khusus untuk mobile device, jangan ragu-ragu.
+  </blockquote>
   <canvas class="box" id='canvas' width="500" height="500"></canvas>
   <script src="./canvas.js"></script>
 </body>
